--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,8 +27,11 @@
 
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/0132e209a2.js" crossorigin="anonymous"></script>
-
+    
+    <!-- Singup font -->
+    <link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet">
     <title>React App</title>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
