--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,7 +30,7 @@
     
     <!-- Singup font -->
     <link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>설렘다방</title>
     
   </head>
   <body>
